# creator-outreach-automation

./: .env.example  .gitignore  README.md  packages.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
app/: streamlit_app.py
app/ui/: __init__.py  navigation.py  runtime.py  state.py  styles.py
creator_outreach_automation/: __init__.py  config.py
creator_outreach_automation/agents/: __init__.py  base.py  builders.py  concrete.py  memory.py  models.py  tools.py  workflow.py
creator_outreach_automation/api/: __init__.py  apollo.py  base.py  brand_discovery.py  gmail.py  google_search.py  instagram_analysis.py  openai_codex.py  youtube.py  youtube_analysis.py  youtube_search.py
creator_outreach_automation/browser/: __init__.py  playwright_runner.py
creator_outreach_automation/database/: __init__.py  brand_repository.py  brand_score_repository.py  connection.py  contact_repository.py  migrations.py  (+4 more)
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ENVIRONMENT.md
prompts/: brand_research.md  brand_scoring.md  creator_profile_generation.md  creator_research.md  outreach_engine.md  system_outreach_writer.md
scripts/: launch_streamlit.py  run_streamlit.cmd  verify_playwright.py  verify_streamlit_forms.py  verify_streamlit_pages.py
tests/: test_agents.py  test_brand_discovery.py  test_brand_scoring.py  test_config.py  test_creator_analysis_extraction.py  test_creator_analysis_service.py  test_creator_profile_generation.py  test_google_search.py  test_instagram_analysis.py  test_outreach_engine.py  test_similar_creator_discovery.py
(+40 files in other folders)
