[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creator-outreach-automation"
version = "0.1.0"
description = "Creator brand outreach automation platform"
requires-python = ">=3.12"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["creator_outreach_automation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
